--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
     <!-- Enhanced Navigation -->
     <div id="nav">
         <div class="nav-brand">
-            <h3><b>SWORD</b></h3>
-            <canvas id="nav-canvas"></canvas>
-            <h3>NEST</h3>
+            <h3><b>SWORD</b> NEST</h3>
         </div>
         <nav class="nav-menu">
             <a href="index.html" class="nav-link active" data-page="home">Ana Sayfa</a>
@@ -86,14 +84,14 @@
             </div>
             <h3>SWORD NEST, YAPAY ZEKA VE İNSAN YARATICILIĞININ<br>KEŞİŞİM NOKTASINDA TASARLANMIŞ YENİ NESİL<br>REKLAM STRATEJİLERİ İLE GELECEĞİ İNŞA EDİYOR.<br><br>YENİ MEDYA TEKNOLOJİLERİNE ÖNCÜLÜK EDEN BİR İNOVASYON ÜSSÜ.</h3>
             <h4>...AYRINTILAR İÇİN KAYDIR</h4>
-            <canvas id="main-canvas"></canvas>
+            <canvas></canvas>
         </div>
         
         <div id="page1">
             <div id="video-container-page1" class="video-glow" data-scroll-sticky>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/aZGH7VTsdXY?si=YP-L4F3gYQKWeo3z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
-            <div id="left-text">
+            <div id="left-text" style="text-align: right;">
                 <h1>YENİ MEDYA YAPIMI<br>YAPAY ZEKA REKLAMLARI<br>CİNEMATİK HİKAYELER</h1>
                 <h3>...VE MARKANIZI LİDER YAPAN DİĞER İNOVASYONLAR</h3>
             </div>
