--- a/projeler.html
+++ b/projeler.html
@@ -35,13 +35,10 @@
     <div id="page-transition" class="page-transition">
         <div class="sword-slash"></div>
     </div>
-
     <!-- Enhanced Navigation -->
     <div id="nav">
         <div class="nav-brand">
-            <h3><b>SWORD</b></h3>
-            <canvas id="nav-canvas"></canvas>
-            <h3>NEST</h3>
+            <h3><b>SWORD</b> NEST</h3>
         </div>
         <nav class="nav-menu">
             <a href="index.html" class="nav-link" data-page="home">Ana Sayfa</a>
