--- a/projeler.html
+++ b/projeler.html
@@ -66,12 +66,15 @@
     <div id="main">
         <!-- Hero Section -->
         <section id="projects-hero">
+            <!-- Particles Container -->
+            <div id="particles-js"></div>
+            
             <div class="hero-content">
                 <h1>ZAFER KOLEKSİYONU</h1>
                 <p>Yapay zeka ve yaratıcılığın buluştuğu başarı hikayeleri</p>
             </div>
-            <div class="sword-decoration"></div>
         </section>
+        <div class="sword-decoration"></div>
 
         <!-- Filter Section -->
         <section id="projects-filter">
@@ -247,36 +250,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- Stats Section -->
-        <section id="projects-stats">
-            <div class="container">
-                <h2 class="section-title">SAYILARLA BAŞARILARIMIZ</h2>
-                <div class="stats-grid">
-                    <div class="stat-item">
-                        <span class="stat-number" data-count="150">0</span>
-                        <span class="stat-suffix">+</span>
-                        <p class="stat-label">Tamamlanan Proje</p>
-                    </div>
-                    <div class="stat-item">
-                        <span class="stat-number" data-count="3">0</span>
-                        <span class="stat-suffix">B%</span>
-                        <p class="stat-label">Ortalama ROI Artışı</p>
-                    </div>
-                    <div class="stat-item">
-                        <span class="stat-number" data-count="50">0</span>
-                        <span class="stat-suffix">M+</span>
-                        <p class="stat-label">Toplam İzlenme</p>
-                    </div>
-                    <div class="stat-item">
-                        <span class="stat-number" data-count="25">0</span>
-                        <span class="stat-suffix">+</span>
-                        <p class="stat-label">Ödül ve Takdir</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <!-- CTA Section -->
         <section id="projects-cta">
             <div class="container">
@@ -335,5 +308,7 @@
     <script src="assets/scripts/page-loader.js"></script>
     <script src="assets/scripts/sword-animation.js"></script>
     <script src="assets/scripts/projects.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="assets/scripts/particles-config.js"></script>
 </body>
 </html>
